tests/fixtures/invalid/pow_set_int_list.py
# Cannot call pow() with Set[int], Int, List[int]
x = pow({1, 2, 3}, 1, [1, 2, 3])
